<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/design_default_color_primary"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <View
        android:id="@+id/viewBackgroud"
        android:layout_width="437dp"
        android:layout_height="673dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/background_received_message"
        app:layout_constraintBaseline_toTopOf="@id/layoutSend"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id = "@+id/imageBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:padding="5dp"
        android:background="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageInfo"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        android:background="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/my_friend"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageInfo"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="15dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/viewBackgroud"
        app:layout_constraintBaseline_toBottomOf="@id/imageBack"
        />

    <ScrollView
        android:layout_width="435dp"
        android:layout_height="633dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewBackgroud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B2B2B"
            android:backgroundTint="#2B2B2B"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMessa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/background_received_message"
                android:padding="12dp"
                android:text="@string/privet"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="123dp" />

            <TextView
                android:id="@+id/textMessag"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_sent_message"
                android:padding="12dp"
                android:text="@string/privet2"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textssa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_received_message"
                android:padding="12dp"
                android:text="@string/kak"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="123dp" />

            <TextView
                android:id="@+id/txtMessag"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_sent_message"
                android:padding="12dp"
                android:text="@string/ff"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/texssa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_received_message"
                android:padding="12dp"
                android:text="@string/gg"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="123dp" />

            <TextView
                android:id="@+id/txtMssag"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_sent_message"
                android:padding="12dp"
                android:text="@string/dd"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tessa"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_received_message"
                android:padding="12dp"
                android:text="@string/bb"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="123dp" />

            <TextView
                android:id="@+id/txtMag"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_sent_message"
                android:padding="12dp"
                android:text="@string/fdf"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/layoutSend"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:padding="8dp"
            android:background="@drawable/ic_send"
            app:tint="@color/white"/>

    </FrameLayout>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/background_chat_input"
        android:hint="@string/type_a_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layoutSend"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
